--- a/Server/package.json
+++ b/Server/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch source/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "^4.9.0",
+    "dayjs": "^1.11.7",
     "fastify": "^4.11.0"
   },
   "devDependencies": {
-    "prisma": "^4.8.1",
+    "@types/node": "^18.11.18",
+    "prisma": "^4.9.0",
     "tsx": "^3.12.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "zod": "^3.20.2"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
